# compression_classification

./: README.md  bible-english.txt  contributing.md  pyproject.toml
.github/workflows/: test.yml
src/compression_classification/: compression_classification.py
tests/: test_compression_classification.py
